# tiny_usb_midi2

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp  makeAndWrite.sh
lib/: CMakeLists.txt
lib/freertos/: CMakeLists.txt
src/: main.cpp  midi2.h  midi2_ci.h  midi2_pe.h  midi2_profile.h  midi2_stream.h  rtos.h  tusb_config.h  ush.h
src/descriptor/: usb_descriptors.cpp  usb_descriptors.h
